# conway-rust-wasm

./: Cargo.toml  README.md  index.html  index.js
src/: conway.rs  lib.rs
