[package]
name = "conway-wasm"
version = "0.1.0"
authors = ["Fabio 'c0m3tx' Vitale <cometspk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
lazy_static = "1.4.0"